# myi3status

./: LICENSE  myi3status.cabal
src/: Main.hs
