name:                myi3status
version:             0.1.0.0
synopsis:            Wrap i3status output in things
description:         Please see README.md
homepage:            http://github.com/jshholland/myi3status#readme
license:             BSD3
license-file:        LICENSE
author:              Josh Holland
maintainer:          josh@inv.alid.pw
copyright:           2015 Josh Holland
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable myi3status
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 0.8 && < 0.9
                     , bytestring >= 0.10 && < 0.11
                     , conduit >= 1.2 && < 1.3
                     , conduit-extra >= 1.1 && < 1.2
                     , conduit-combinators >= 1.0 && < 1.1
                     , lens >= 4.12 && < 4.13
                     , process >= 1.2 && < 1.3
                     , text >= 1.2 && < 1.3
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jshholland/myi3status
